--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,5 @@
 <%- include('partials/header') %>
-
-
+<!-- oyyoo -->
 <div class="jumbotron centered">
   <div class="container">
     <i class="fas fa-key fa-6x"></i>
